grammar.js
    multistmt: $ => seq(
      $._stmt,
      repeat(seq(';', $._stmt)),
      optional(';')
    ),
    _stmt: $ => choice(
      $._select_stmt,
      $.explain,
    /*  $.alter_statement,
        $.analyze_statement,
        $.assert_statement,
        $.aux_load_data_statement,
        $.clone_data_statement,
        $.dml_statement,
        $.merge_statement,
        $.truncate_statement,
        $.begin_statement,
        $.set_statement,
        $.commit_statement,
        $.start_batch_statement,
        $.run_batch_statement,
        $.abort_batch_statement,
        $.create_constant_statement,
        $.create_database_statement,
        $.create_function_statement,
        $.create_procedure_statement,
        $.create_role_statement, // Postgres
        $.create_index_statement,
        $.create_privilege_restriction_statement,
        $.create_row_access_policy_statement,
        $.create_external_table_statement,
        $.create_external_table_function_statement,
        $.create_model_statement,
        $.create_schema_statement,
        $.create_snapshot_table_statement,
        $.create_table_function_statement,
        $.create_table_statement,
        $.create_view_statement,
        $.create_entity_statement,
        $.define_table_statement,
        $.describe_statement,
        $.execute_immediate,
        $.execute_statement,
        $.explain_statement,
        $.export_data_statement,
        $.export_model_statement,
        $.fetch_statment,
        $.grant_statement,
        $.grant_role_statement, // Postgres
        $.rename_statement,
        $.revoke_statement,
        $.rollback_statement,
        $.show_statement,
        $.drop_all_row_access_policies_statement,
        $.drop_statement,
        $.call_statement,
        $.import_statement,
        $.module_statement,
        */
    ),

    /*==== Keywwords ====*/
    _kw_array: _ => token(reserve('array')),
    null: _ => token(reserve('null')),
    integer_literal: _ => choice(/\d+/, /0x[\da-fA-F]+/),

    _exp: _ => token.immediate(/e[+-]?\d+/),
    float_literal: $ => choice(
      seq(/\d+\.\d*/, optional($._exp)),
      seq(/\.\d+/, optional($._exp)),
      seq(/\d+/, $._exp)
    ),

    /* String and Bytes Literal */
    string_literal: $ => choice(
      seq(/[rR]?'/, $._single_quote_text),
      seq(/[rR]?"/, $._double_quote_text),
      seq(/[rR]?'''/, $._single_quote_3_text),
      seq(/[rR]?"""/, $._double_quote_3_text)
    ),
    _single_quote_text: $ => seq(
      repeat(
        choice(token.immediate(prec(1, /[^\\\n\r']/)), $.escape_sequence)
      ),
      token.immediate("'")
    ),
    _double_quote_text: $ => seq(
      repeat(
        choice(token.immediate(prec(1, /[^\\\n\r"]/)), $.escape_sequence)
      ),
      token.immediate('"')
    ),
    _single_quote_3_text: $ => seq(
      repeat(
        seq(
          token.immediate(/('|'')?/),
          choice(token.immediate(prec(1, /[^\\']/)), $.escape_sequence)
        )
      ),
      token.immediate("'''")
    ),
    _double_quote_3_text: $ => seq(
      repeat(
        seq(
          token.immediate(/("|"")?/),
          choice(token.immediate(prec(1, /[^\\"]/)), $.escape_sequence)
        )
      ),
      token.immediate('"""')
    ),
    identifier: $ => choice($._unquoted_ident, $._backtick_text),
    general_identifier: $ => choice($._unquoted_general_ident, $._backtick_text),
    _unquoted_ident: _ => /[a-zA-Z_][a-zA-Z_0-9]*/,
    _unquoted_general_ident: _ => /[a-zA-Z_0-9]+/,
    _backtick_text: $ => seq(
      '`',
      repeat(choice(token.immediate(/[^\\`\r\n]/), $.escape_sequence)),
      token.immediate('`')
    ),

    /* Type */
    // Unlike other type names, 'INTERVAL' is a reserved keyword.
    array_type: $ => seq($._kw_array, '<', $.type, '>'),
    _raw_type: $ => choice($.array_type, $.struct_type, $._type_name),
    type: $ => seq($._raw_type, optional($.type_param), optional($.collate_clause)),

    /*==== Clause ====*/
    _expr_primary: $ => choice(
      $._c_expr,
      $.at_expr,
      $.pg_cast_expr,
      $.unary_expr,
      $.binary_expr,
      $.array_elem,
    ),
    unary_expr: $ => prec(PREC.UMINUS, seq(/~|\+|-/, $._expr_primary)),
    array_elem: $ => prec(PREC.PRIMARY, seq($._expr_primary, '[', $._expr_primary, ']')),
    binary_expr: $ => choice(
      prec.left(PREC.ADD, seq($._expr_primary, /\+|-/, $._expr_primary)),
      prec.left(PREC.MUL, seq($._expr_primary, /\*|\/|%|\|\|/, $._expr_primary)),
      prec.left(PREC.SHIFT, seq($._expr_primary, /<<|>>/, $._expr_primary)),
      prec.left(PREC.BITWISE_AND, seq($._expr_primary, /&/, $._expr_primary)),
      prec.left(PREC.BITWISE_OR, seq($._expr_primary, /\|/, $._expr_primary)),
      prec.left(PREC.BITWISE_XOR, seq($._expr_primary, /\^/, $._expr_primary)),
      prec.left(PREC.COMPARE, seq($._expr_primary, /=|<=?|>=?|!=|<>/, $._expr_primary)),
    ),

    /*
     * Productions that can be used in both a_expr and b_expr.
     *
     * Note: productions that refer recursively to a_expr or b_expr mostly
     * cannot appear here.	However, it's OK to refer to a_exprs that occur
     * inside parentheses, such as function arguments; that cannot introduce
     * ambiguity to the b_expr syntax.
     */
    paren_expr: $ => seq('(', $.expr ,')'),

    /* Constants */
    dot_identifier: $ => prec(PREC.PRIMARY, seq($._expr_primary, '.', $.general_identifier)),
    subquery_expr: $ => choice(
      seq($._kw_array, $.select_in_parens),
      seq(reserve('exists'), optional($.hint), $.select_in_parens),
    ),

    /* Function Expression */
    func_expr: $ => choice(
      seq($.func_app, optional($.within_group_clause), optional($.filter_clause), optional($._over_clause)),
      $.func_expr_common_subexpr
    ),
    func_app: $ => seq(field('name', $.path_expr), '(', optional(choice(
      seq(
        alias($.func_arg_list_variadic, $.func_arg_list),
        optional($.nulls_handling),
        optOrderBy($), optional($._limit_offset)
      ),
      seq($.func_arg_variadic, optOrderBy($), optLimit($)),
      seq(
        $.set_quantifier,
        optional($.func_arg_list),
        optional($.nulls_handling),
        optOrderBy($), optional($._limit_offset)),
      seq($.order_by_clause),
    )), ')'),
    func_arg_list: $ => commaSep1($._func_arg_expr),
    _func_arg_expr: $ => choice(
      $.expr,
      seq($.path_expr, ':=', $.expr),
      seq($.path_expr, '=>', $.expr)
    ),
    path_expr: $ => prec.right(seq($.identifier, repeat(seq('.', $.identifier)))),
    _over_clause: $ => seq($._kw_over, field('window', $.window_spec)),
    expr_list: $ => seq($.expr, repeat(seq(',', $.expr))),

    _array_construct_prefix: $ => choice($._kw_array, $.array_type),
    array_expr: $ => seq(optional($._array_construct_prefix), '[', optional($.expr_list), ']'),
    /*
    select_in_parens: $ => seq('(', choice($.select, $.select_in_parens), ')'),
    // select_no_parens
    select: $ => choice(
      $._simple_select,
      $.select_set,
      seq($._select_clause, $.order_by_clause),
      seq($._select_clause, optOrderBy($), $.for_locking_clause, optional($._select_limit)),
      seq($._select_clause, optOrderBy($), $._select_limit, optional($.for_locking_clause)),
      seq($._with_clause, $._select_clause, optional($.order_by_clause)),
      seq($._with_clause, $._select_clause, optional($.order_by_clause), $.for_locking_clause, optional($._select_limit)),
      seq($._with_clause, $._select_clause, optional($.order_by_clause), $._select_limit, optional($.for_locking_clause)),
    ),
    // select_clause ~ <query expression body> in foundation grammar
    _select_clause: $ => choice(
      $._simple_select,
      $.select_in_parens,
      $.select_set,
    ),
    // simple_select ~ <simple table> in foundation grammar
    // SELECT statements that can appear within set operations,
    // including UNION, INTERSECT and EXCEPT.  '(' and ')' can be used to specify
    // the ordering of the set operations.	Without '(' and ')' we want the
    // operations to be ordered per the precedence specs at the head of this file.
    _simple_select: $ => choice(
      $.select_spec,
      $.values_clause,
      seq(reserve('table'), $._relation_expr),
    ),
    // set query
    select_spec: $ => seq(
      token(prec(1, reserve('select'))), optional($.set_quantifier),
      field('select_list', $.select_list),
      field('into', optional($.into_clause)),
      field('from', optional($._from_clause)),
      field('where', optional($._where_clause)),
      field('group', optional($._group_by_clause)),
      field('having', optional($.having_clause)),
      field('window', optional($.window_clause)),
      field('pivot', optional(choice($.pivot_clause, $.unpivot_clause))),
    ),

    _from_clause: $ => seq(token(prec(1, KW.FROM)), $.from_list),
    from_list: $ => commaSep1($.table_ref),
    // Reference a table ~ <table reference> in foundation grammar.
    table_ref: $ =>  choice(
      seq($._relation_expr, optional($._alias_clause), field('sample', optional($.sample_clause))),
      seq(reserveOpt('lateral'), $.func_table, optional($.func_alias_clause)),
      seq(reserveOpt('lateral'), $.xmltable, optional($._alias_clause)),
      seq(reserveOpt('lateral'), alias($.select_in_parens, $.subquery_table), optional($._alias_clause)),
      $.joined_table,
      seq('(', $.joined_table , ')', $._alias_clause),
    ),

    _alias_clause: $ => choice(
      seq(field('alias', $.identifier), optional(field('column_alias', $._column_alias))),
      seq($._kw_as, field('alias', $.identifier), optional(field('column_alias', $._column_alias))),
      seq($._kw_as, field('column_alias', $._column_alias))
    ),
    _select_limit: $ => choice(
      seq(field('limit', $.limit_clause), optional(field('offset', $.offset_clause))),
      seq(field('offset', $.offset_clause), optional(field('limit', $.limit_clause)))
    ),
    _limit_offset: $ => seq($.limit_clause, optional($.offset_clause)),
    select_list: $ => seq($.select_item, repeat(seq(',', $.select_item)), optional(',')),
    select_item: $ => choice(
      $.expr,
      $.star,
      $._expr_opt_as_alias,
      seq($.star, $._star_modifiers),
      seq($.expr, field('star', $.dot_star)), //optional($._star_modifiers)),
    ),
    _expr_opt_as_alias: $ => seq($.expr, optional($._kw_as), field('alias', $.identifier)),
    _star_modifiers: $ => choice(
      $._star_except,
      $._star_replace,
      seq($._star_except, $._star_replace)
    ),
    _relation_expr: $ => choice(
      $.path_expr,
      seq($.path_expr,  '*'),
      seq(reserve('only'), $.path_expr ),
      seq(reserve('only'), '(', $.path_expr, ')')
    ),

    // Bigquery table_path_expr:
    /* table_path_expr: $ => seq(
      $.table_path_expr_base, optional($.join_hint),
      choice(
        optional($.pivot_or_unpivot_clause_and_alias),
        optional($.with_offset_and_alias),
      ),
      optional($.at_system_time),
      optional($.sample_clause)
    ),
    join_hint: reserveMany('hash', 'lookup'), */

    /* Where clause in select */
    _where_clause: $ => seq(token(prec(1, reserve('where'))), $.expr),
    /* Group by and having clause */
    _group_by_clause: $ => seq($._kw_group, KW.BY, optional($.set_quantifier), $.group_by_list),
    _with_clause: $ => seq(reserve('with'), reserveOpt('recursive'), field('with', $.with_list)),
